Fixed some errors with spacing
Specially the spacing of all animal title pages and the spacing of the imgs in the carlos zoo page

--- a/css/CarlosZoo.css
+++ b/css/CarlosZoo.css
@@ -52,6 +52,7 @@ section{
     border-radius: 10px;
     text-decoration: none;
     color: black;
+    height:fit-content;
 }
 
 .animal-container:hover{
